tests/ui/pattern/move-ref-patterns/move-ref-patterns-default-binding-modes.stderr
warning: dereferencing `mut` binding
  --> $DIR/move-ref-patterns-default-binding-modes.rs:9:13
   |
LL |     let (a, mut b) = &p;
   |             ^^^^^
   |             |
   |             `mut` dereferences the type of this binding
   |             help: desugar the match ergonomics: `&(mut b)`
   |
   = warning: this changes meaning in Rust 2024
   = note: for more information, see FIXME none yet
help: this will change in edition 2024
  --> $DIR/move-ref-patterns-default-binding-modes.rs:9:13
   |
LL |     let (a, mut b) = &p;
   |             ^^^^^
note: the lint level is defined here
  --> $DIR/move-ref-patterns-default-binding-modes.rs:1:9
   |
LL | #![warn(dereferencing_mut_binding)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0507]: cannot move out of a shared reference
  --> $DIR/move-ref-patterns-default-binding-modes.rs:9:22
   |
LL |     let (a, mut b) = &p;
   |             -----    ^^
   |             |
   |             data moved here
   |             move occurs because `b` has type `U`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |     let (a, ref mut b) = &p;
   |             +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0507`.
